k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: sentinel
  labels:
    app: backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30081
